@@ -1,4 +1,5 @@
 /tests              export-ignore
+/tests_phpt         export-ignore
 .git*               export-ignore
 /phpstan.neon       export-ignore
 /phpcs.xml          export-ignore
