@@ -1,0 +1,8 @@
+--TEST--
+Failing test
+--FILE--
+<?php
+echo "test123";
+?>
+--EXPECT--
+test1234
