@@ -1,0 +1,10 @@
+--TEST--
+Skipped test
+--SKIPIF--
+<?php echo "skip"; ?>
+--FILE--
+<?php
+echo "test123";
+?>
+--EXPECT--
+test123
