@@ -1,0 +1,8 @@
+--TEST--
+Test
+--FILE--
+<?php
+echo "test123";
+?>
+--EXPECT--
+test123
